@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!--
 	Example RC file for ctrlproxy
-	(C) 2003 Jelmer Vernooij <jelmer@vernstok.nl>
+	(C) 2003-2004 Jelmer Vernooij <jelmer@vernstok.nl>
 	Read the documentation for more information about certain plugins, 
 	elements or attributes.
 		
