@@ -1,4 +1,5 @@
 Ctrlproxy 2.7:
+ * New, more advanced filter system supporting classes and priorities
  * Make name and hostmask attribute of nick on network shared 
  	(Daniel Poelzleithner <ctrlproxy@poelzi.org>
  * Do the actual NICK after GHOST'ing another nick
